fix: adjust body margin and padding, update card collection alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 body {
   background-color: #cadffa;
-  margin: 0;
-  padding: 0;
+
   font-family: sans-serif;
 }
 
@@ -28,7 +27,7 @@ body {
 .cardcollection {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
   gap: 30px;
   padding: 30px;
   align-items: flex-start;
